--- a/Deploy/Game.cfg
+++ b/Deploy/Game.cfg
@@ -1,7 +1,8 @@
 Config =
 {
-    Graphics =
+    Window =
     {
+        Name = "Game",
         Width = 1024,
         Height = 576,
         VSync = true,
